@@ -78,7 +78,7 @@ class Transaction(object):
             LRUDict(config.getint('cache', 'model')))
 
     def start(self, database_name, user, readonly=False, context=None,
-            close=False, autocommit=False, _nocache=False):
+            close=False, autocommit=False):
         '''
         Start transaction
         '''
@@ -105,11 +105,10 @@ class Transaction(object):
         self.timestamp = {}
         self.counter = 0
         self._datamanagers = []
-        self._nocache = _nocache
-        if not _nocache:
+        if database_name:
             from trytond.cache import Cache
             try:
-                Cache.clean(database.name)
+                Cache.sync(self)
             except BaseException:
                 self.stop(False)
                 raise
@@ -191,14 +190,14 @@ class Transaction(object):
         self._local.transactions.append(transaction)
         return transaction
 
-    def new_transaction(self, autocommit=False, readonly=False,
-            _nocache=False):
+    def new_transaction(self, autocommit=False, readonly=False):
         transaction = Transaction(new=True)
         return transaction.start(self.database.name, self.user,
             context=self.context, close=self.close, readonly=readonly,
-            autocommit=autocommit, _nocache=_nocache)
+            autocommit=autocommit)
 
     def commit(self):
+        from trytond.cache import Cache
         try:
             if self._datamanagers:
                 for datamanager in self._datamanagers:
@@ -207,6 +206,7 @@ class Transaction(object):
                     datamanager.commit(self)
                 for datamanager in self._datamanagers:
                     datamanager.tpc_vote(self)
+            Cache.commit(self)
             self.connection.commit()
         except:
             self.rollback()
@@ -219,19 +219,15 @@ class Transaction(object):
                 logger.critical('A datamanager raised an exception in'
                     ' tpc_finish, the data might be inconsistant',
                     exc_info=True)
-        if not self._nocache:
-            from trytond.cache import Cache
-            Cache.resets(self.database.name)
 
     def rollback(self):
+        from trytond.cache import Cache
         for cache in self.cache.values():
             cache.clear()
         for datamanager in self._datamanagers:
             datamanager.tpc_abort(self)
+        Cache.rollback(self)
         self.connection.rollback()
-        if not self._nocache:
-            from trytond.cache import Cache
-            Cache.resets(self.database.name)
 
     def join(self, datamanager):
         try:
